src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Engagement_Conversion_From_Level__c</fullName>
        <label>Engagement Conversion From Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Conversion_To_Level__c</fullName>
        <label>Engagement Conversion To Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Conversion_Type__c</fullName>
        <label>Engagement Conversion Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_List_Growth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Groundwire Engage) if checked indicates that this campaign membership was responsible for giving the contact their very first level above 0</description>
        <label>New Supporter</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>